--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
 
     <licenses>
         <license>
-            <name>BSD-3</name>
+            <name>MIT</name>
         </license>
     </licenses>
 
